# mlx-tuning-fork

./: CHANGELOG.md  LICENSE  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: completion_only_training.py  config.py
src/mlx_tuning_fork/: completion_only_training.py  config.py  dataset.py  generate.py  reporting.py  training.py  wandb_sweep.py
src/mlx_tuning_fork/prompt_templates/: alpaca.py  chatml.py  gemma.py  llama3.py  mistral.py  phi.py
src/mlx_tuning_fork/tuning/: __init__.py  configurable_trainer.py  dpo.py  input_masking.py  utils.py
src/mlx_tuning_fork/tuning/dynamic_learning/: __init__.py
src/prompt_templates/: mistral.py
tests/: test_completion_only.py  test_completion_only_batching.py  test_input_masking.py  test_scheduler_config.py
